process: Fix PYSON generation of transition buttons (#3242)
Fix #12999

--- a/modules/process/doc/en/CHANGELOG
+++ b/modules/process/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#12999 Make process transition authorizations work again
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 * BUG#10229 Properly set the context when running a process
