--- a/modules/offered/doc/en/CHANGELOG
+++ b/modules/offered/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13000 APIs should use code of web resources for identification
+
 Version 2.6 - 2019-10-11
 * FEA#12435 Add custom resources in extra data api description
 * FEA#11920 Improve package functionnality. Packages can be defined to be selected at contract level or covered element level. Contract/covered/option extra data can be pre-defined in package
