--- a/modules/offered/doc/fr/CHANGELOG
+++ b/modules/offered/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13000 Les resources web doivent être identifiées par leur code dans les appels API
+
 Version 2.6 - 2019-10-11
 * FEA#12435 Ajout des resources API personalisées dans la description des données complémentaires
 * FEA#11920 Amélioration de la fonctionnalité Formule sur un produit. Les formules peuvent être définie au global sur un contrat ou par élément couvert. De plus, les données complémentaires du contrat/des éléments couverts/options peuvent être prédéfinies au niveau d'une formule.
