account_payment_sepa_cog: Add constraint on mandate signature date (#2993)
* add constraint on mandate signature date

--- a/modules/account_payment_sepa_cog/doc/fr/CHANGELOG
+++ b/modules/account_payment_sepa_cog/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12943 Ajout d'une contrainte sur la date de signature de mandat SEPA
+
 Version 2.6 - 2019-10-11
 * OTH#00000 Correction des balises adresses et remittance des fichiers sepa
 * OTH#00000 Correction de la chaine payment_working_days: appel à do_sepa_messages manquant
