--- a/modules/account_payment_sepa_cog/doc/en/CHANGELOG
+++ b/modules/account_payment_sepa_cog/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12943 Add constraint on mandate signature date
+
 Version 2.6 - 2019-10-11
 * OTH#00000 Fix sepa files adresses and remittance tags
 * OTH#00000 Fix payment_working_days chain : missing do_sepa_message
