--- a/modules/contract_surrender/doc/en/CHANGELOG
+++ b/modules/contract_surrender/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13005 Force calculate prices when cancelling a surrender on a not yet terminated contract
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 * BUG#10166 Modify the value of the invoice date in the invoice surrender by assigning the surrender date
