--- a/modules/table/doc/en/CHANGELOG
+++ b/modules/table/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13004 Fix import cells from csv file
+
 Version 2.6 - 2019-10-11
 * FEA#12364 Allow to import 1d or 2d table from copy/paste from excel and creating dimension values at the same time
 
