--- a/modules/table/doc/fr/CHANGELOG
+++ b/modules/table/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13004 Correction de l'import de cellules depuis un fichier CSV
+
 Version 2.6 - 2019-10-11
 * FEA#12364 Possibilité d'importer une table a 1 ou 2 dimensions par copier/coller depuis Excel et en créant en automatique les valeurs des dimensions associées.
 
