endorsement_process: fix apply_without_generate in next endorsement wizard (#3244)
Fix #13002

--- a/modules/endorsement_process/doc/en/CHANGELOG
+++ b/modules/endorsement_process/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13002 Fix application of initial endorsement in next endorsements wizard
 * BUG#12985 Restore behavior of wizard asking for generation of endorsements
 
 Version 2.6 - 2019-10-11
