account_cog: Allow off-balance accounts for tax (#3253)

--- a/modules/account_cog/doc/en/CHANGELOG
+++ b/modules/account_cog/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Allow off-balance accounts for tax
+
 Version 2.6 - 2019-10-11
 * OTH#00000 Fix payment date display following merge with 5.2 (payment date was always hidden)
 * BUG#12602 Fix crash due to merge with 5.2
