--- a/modules/premium/doc/fr/CHANGELOG
+++ b/modules/premium/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12906 Afficher le nom de la personne couverte lorsque cela est possible dans la vue des primes dans le champ nom
 Version 2.6 - 2019-10-11
 * BUG#12448 Générer une erreur si deux tarifs avec des montants non nulls sont sauvegardés pour le même élément facturé
 * BUG#12463 Correction du calcul des primes lorsque sur une garantie une règle de fin est définie et que sur le produit une règle de renouvellement est paramétrée.
