contract_life_clause: delete accepting default (#3217)

--- a/modules/contract_life_clause/doc/en/CHANGELOG
+++ b/modules/contract_life_clause/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12911 delete default accepting true
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 * BUG#10206 Make beneficiaries not editable if the contract's status is not quote
