--- a/modules/offered/doc/fr/CHANGELOG
+++ b/modules/offered/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12957 Vérifiez que la date de fin du produit est supérieure à celle du produit start_date
 * BUG#13000 Les resources web doivent être identifiées par leur code dans les appels API
 
 Version 2.6 - 2019-10-11
