--- a/modules/health/doc/en/CHANGELOG
+++ b/modules/health/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12909 initialize the birth rank to 1
+
 Version 2.6 - 2019-10-11
 * BUG#12036 Check that a relation exists in the party relation list otherwise return 0
 * OTH#0000 Display birth order after ssn instead after birth name
