claim_almerys: Add Almerys payback batch (#3205)
Fix #12868

--- a/modules/claim_almerys/doc/fr/CHANGELOG
+++ b/modules/claim_almerys/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12868 Ajout du batch d'indus almerys
+
 Version 2.6 - 2019-10-11
 * OTH#00000 Quelques améliorations de la chaîne de batch et de la gestion de fichiers
 * OTH#00000 Ajout de la chaîne de batch de décomptes Almerys
