--- a/modules/claim_almerys/doc/en/CHANGELOG
+++ b/modules/claim_almerys/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12868 Add Almerys payback batch
+
 Version 2.6 - 2019-10-11
 * OTH#00000 A few improvements to the batch chain and file handling
 * OTH#00000 Add claim almerys batch chain
