--- a/modules/contract_reduction/doc/fr/CHANGELOG
+++ b/modules/contract_reduction/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#0000 Fix divers pour la 2.6
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 * BUG#11146 La date de réduction doit être une date de fin de période de quittancement plutôt que de début
