account_party_balance: Fix crash when opening party balance (#3255)

--- a/modules/account_party_balance/doc/fr/CHANGELOG
+++ b/modules/account_party_balance/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Fix crash when opening the party balance screen
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
