--- a/modules/account_party_balance/doc/en/CHANGELOG
+++ b/modules/account_party_balance/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Correction d'un crash lors de l'ouverture de la vue compte contrat et tiers
+
 Version 2.6 - 2019-10-11
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
