offered: Add subscription behaviour rule on coverage (#2969)
Fix #12073

--- a/modules/offered/locale/fr.po
+++ b/modules/offered/locale/fr.po
@@ -298,6 +298,14 @@ msgctxt "field:offered.option.description,subscription_behaviour:"
 msgid "Subscription Behaviour"
 msgstr "Comportement à la Souscription"
 
+msgctxt "field:offered.option.description,subscription_rule:"
+msgid "Subscription Rule"
+msgstr "Règle définissant le comportement à la souscription "
+
+msgctxt "field:offered.option.description,subscription_rule_extra_data:"
+msgid "Subscription Rule Extra Data"
+msgstr "Paramètre de la règle de souscription"
+
 msgctxt "field:offered.option.description,tags:"
 msgid "Tags"
 msgstr "Labels"
@@ -305,6 +313,10 @@ msgstr "Labels"
 msgctxt "field:offered.option.description,tags_name:"
 msgid "Tags"
 msgstr "Labels"
+
+msgctxt "field:offered.option.description,use_subscription_behavior_rule:"
+msgid "Use subscription behavior rule engine"
+msgstr "Utilisation d'une règle de comportement à la souscription"
 
 msgctxt "field:offered.option.description,write_date:"
 msgid "Write Date"
@@ -969,6 +981,18 @@ msgid "Define how the option is initialized and required at subscription"
 msgstr ""
 "Définit comment une garantie est initialisée et requise à la souscription"
 
+msgctxt "help:offered.option.description,subscription_rule:"
+msgid ""
+"Result is a dictionnary with following keys: \n"
+" behaviour: define the behaviour at subscription (value can be mandatory, defaulted, optional, not_subscriptable)\n"
+"options_required: list of required coverage code \n"
+"options_excluded: list of excluded coverage code \n"
+msgstr ""
+"Le résultat attendu est un dictionnaire avec les clés suivantes:\n"
+"behaviour: Défini le comportement à la souscription (les valeurs possibles sont mandatory, defaulted, optional, not_subscriptable)\n"
+"option_required: liste des codes des garanties requises\n"
+"options_excluded: liste des codes des garnties exclues"
+
 msgctxt "help:offered.option.description,tags:"
 msgid "Add and search all related configuration objects based on a tag"
 msgstr ""
@@ -1126,6 +1150,10 @@ msgctxt "model:ir.message,text:msg_too_many_recursion_levels"
 msgid "Too many recursion levels in sub data definition."
 msgstr "La définition des sous données a trop de niveaux de récursivité"
 
+msgctxt "model:ir.message,text:msg_wrong_rule_format"
+msgid "The return value of the rule must be a dictionnary."
+msgstr "Le résultat retourné par la règle doit être un dictionnaire."
+
 msgctxt "model:ir.rule.group,name:rule_group_coverage"
 msgid "User in company"
 msgstr "Utilisateur dans le société"
@@ -1247,6 +1275,29 @@ msgctxt "model:res.group,name:group_product_read"
 msgid "Coog Product consultation"
 msgstr "Coog Consultation Produit"
 
+msgctxt "model:rule_engine,name:default_subscription_rule"
+msgid "Default Subscription Behavior Rule"
+msgstr "Règle de comportement à la souscription par défaut "
+
+msgctxt "model:rule_engine.rule_parameter,selection:subscription_behaviour"
+msgid ""
+"mandatory:Mandatory\n"
+"defaulted:Defaulted\n"
+"optional:Optional\n"
+msgstr ""
+
+msgctxt "model:rule_engine.rule_parameter,string:excluded_options"
+msgid "Excluded Option (separate by ',')"
+msgstr ""
+
+msgctxt "model:rule_engine.rule_parameter,string:required_options"
+msgid "Required Option (separate by ',')"
+msgstr "Options requises (séparée par ',')"
+
+msgctxt "model:rule_engine.rule_parameter,string:subscription_behaviour"
+msgid "Subscription Behavior"
+msgstr "Comportement à la souscription"
+
 msgctxt "selection:extra_data,kind:"
 msgid ""
 msgstr " "
@@ -1342,6 +1393,10 @@ msgstr "Personne Physique"
 msgctxt "selection:rule_engine,type_:"
 msgid "Ending"
 msgstr "Résiliation"
+
+msgctxt "selection:rule_engine,type_:"
+msgid "Subscription Behaviour"
+msgstr "Comportement à la Souscription"
 
 msgctxt "view:extra_data-sub_extra_data:"
 msgid "Relation"
