report_engine_bdoc: Allow to call BDOC via webservice (#3248)
Fix #13118

--- a/modules/report_engine_bdoc/doc/en/CHANGELOG
+++ b/modules/report_engine_bdoc/doc/en/CHANGELOG
@@ -1,2 +1,4 @@
+* FEA#13118 Allow to call BDOC via webservice
+
 Version 2.6 - 2019-10-11
 * FEA#12161 Interface with BDOC printing system for batch printing
