--- a/modules/third_party_protocol_almerys/doc/en/CHANGELOG
+++ b/modules/third_party_protocol_almerys/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Fix ssn and perimetre service in batch
+
 Version 2.6 - 2019-10-11
 * BUG#12797 Do not set unknown address on the address if one of his lines is filled
 * OTH#00000 Fix Almerys default address values
