--- a/modules/loan/doc/en/CHANGELOG
+++ b/modules/loan/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Add required searcher on loan state increment
+
 Version 2.6 - 2019-10-11
 * FEA#12327 Add contract summary to be displayed during underwriting
 * FEA#12229 Manage loan contracts in subscription API
