contract_reduction: Use alternative rebill date when cancelling (#3269)
Before #11146, the last invoice of a reduced contract would
end up one day before the reduction date. After, it would end
right on this date.

The problem is that the cancellation code assumes the latter,
which causes a problem on contracts which were already reduced
when the fix went live.

So we use another date when we detect this edge case.

Fix #13091

--- a/modules/contract_reduction/doc/en/CHANGELOG
+++ b/modules/contract_reduction/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13091 Rebill on the last invoice date if needed when cancelling a reduction
 * OTH#0000 Various fix 2.6
 
 Version 2.6 - 2019-10-11
