contract_premium_modification: Update view attributes according to new buttons group id (#3288) (#3289)
Fix #00000

--- a/modules/contract_premium_modification/doc/en/CHANGELOG
+++ b/modules/contract_premium_modification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Update view attributes according to new buttons group id
 * FEA#12796 Add support for discounts
 
 Version 2.6 - 2019-10-11
