--- a/modules/contract_premium_modification/doc/fr/CHANGELOG
+++ b/modules/contract_premium_modification/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Mise à jour de view attributes en fonction du nouvel id du groupe de boutons
 * FEA#12796 Ajout support des réductions commerciales
 
 Version 2.6 - 2019-10-11
