third_party_protocol_almerys: handle unknown code in almerys feedback batch (#3301)
Fix #00000

--- a/modules/third_party_protocol_almerys/doc/en/CHANGELOG
+++ b/modules/third_party_protocol_almerys/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Handle unknown error codes in Almerys feedback batch
 * OTH#00000 Fix ssn and perimetre service in batch
 
 Version 2.6 - 2019-10-11
