--- a/modules/third_party_protocol_almerys/doc/fr/CHANGELOG
+++ b/modules/third_party_protocol_almerys/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Support des codes erreur inconnus dans le batch de retour Almerys
 * OTH#00000 Correction du ssn et du perimetre service dans le batch
 
 Version 2.6 - 2019-10-11
