health: Handle party api birth order (#3303)
Ref #13248

--- a/modules/health/doc/fr/CHANGELOG
+++ b/modules/health/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13248 API, Gestion du rang de naissance sur les tiers
 * FEA#12909 initialiser le rang de naissance à 1
 
 Version 2.6 - 2019-10-11
