--- a/modules/contract/doc/en/CHANGELOG
+++ b/modules/contract/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Define appliable conditions in the contract creation API
 * BUG#12942 Fix clearing of status of options when reactivating contract
 
 Version 2.6 - 2019-10-11
