--- a/modules/contract/doc/fr/CHANGELOG
+++ b/modules/contract/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Définition de la date de condition dans l'API de contrat
 * BUG#12942 Correction de la réinitialisation du status des garanties à la réactivation
 
 Version 2.6 - 2019-10-11
