document_request_electronic_signature: Fix Crash P2PDF merger (#3307)
Fix #00000

--- a/modules/document_request_electronic_signature/doc/en/CHANGELOG
+++ b/modules/document_request_electronic_signature/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13271 Fix PY2PDF merger crash when bookmarks are set
+
 Version 2.6 - 2019-10-11
 * FEA#12876 Trigger an event when signature is complete
 * FEA#12821 Allow to sign a set of documents (mixing request line document and coog generated documents)
