contract_premium_modification: Manage discounts in subscription API
Ref #12989

--- a/modules/contract_premium_modification/doc/fr/CHANGELOG
+++ b/modules/contract_premium_modification/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12989 Ajout des réductions commerciale à l'API de souscription
 * OTH#00000 Mise à jour de view attributes en fonction du nouvel id du groupe de boutons
 * FEA#12796 Ajout support des réductions commerciales
 
