--- a/modules/loan/doc/en/CHANGELOG
+++ b/modules/loan/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13201 Modify coverage eligibility error on a loan
 * OTH#00000 Add required searcher on loan state increment
 
 Version 2.6 - 2019-10-11
