--- a/modules/premium/doc/en/CHANGELOG
+++ b/modules/premium/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12444 The Rule "Premium Date" is now a boolean type
 * FEA#12906 Display covered information in premium list view
 Version 2.6 - 2019-10-11
 * BUG#12448 Generate error when two premiums with amount defined are saved on the same rated entity
