--- a/modules/claim_indemnification/doc/en/CHANGELOG
+++ b/modules/claim_indemnification/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#13304 Do not check share for canceled indemnification
+
 Version 2.6 - 2019-10-11
 * OTH#00000 Fix typo following merge
 * BUG#11431 When payback method is immediate on an unpaid cancelled indemnification, all payment lines linked to indemnifications of the related claim should be blocked
