--- a/modules/claim/doc/en/CHANGELOG
+++ b/modules/claim/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Improve administration benefit view to display all loss desc 
+
 Version 2.6 - 2019-10-11
 * FEA#12282 Manage claim_bank_account in API
 * FEA#11832 Use an identifier at the bank account for refund of benefits
