migrator_party: fix party_relation migrator (#3196)

--- a/modules/migrator_party/doc/fr/CHANGELOG
+++ b/modules/migrator_party/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12844 Ajout des dates de début et de fin au migrateur de relation tiers
+
 Version 2.6 - 2019-10-11
 * BUG#12485 Améliorer le batch de migration des contacts afin de ne plus créer les lignes de contacts en doublons dans le cas où on a plusieurs type de contacts pour le même tiers
 
