--- a/modules/migrator_party/doc/en/CHANGELOG
+++ b/modules/migrator_party/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12844 Add start_date and end_date to party_relation migrator
+
 Version 2.6 - 2019-10-11
 * BUG#12485 Improve the migration contacts batch in order to no longer create duplicate contact lines in case of multiple types of contacts exists for the same party
 
