--- a/modules/migrator_bank/doc/fr/CHANGELOG
+++ b/modules/migrator_bank/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#12845 correctif de la migration des comptes bancaires avec plusieurs
+propriétaires
 * FEA#12847 Ajout de migrator du mandat sepa
 
 Version 2.6 - 2019-10-11
