web_configuration: add binary_value to web ui resource, add API to retrieve values (#3304)
Fix #13159

--- a/modules/offered/locale/fr.po
+++ b/modules/offered/locale/fr.po
@@ -102,6 +102,10 @@ msgctxt "field:extra_data,type_:"
 msgid "Type"
 msgstr "Type technique"
 
+msgctxt "field:extra_data,web_ui_resources:"
+msgid "Web UI Resources"
+msgstr "Ressources Web"
+
 msgctxt "field:extra_data,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
@@ -714,6 +718,10 @@ msgctxt "field:offered.product,tags_name:"
 msgid "Tags"
 msgstr "Labels"
 
+msgctxt "field:offered.product,web_ui_resources:"
+msgid "Web UI Resources"
+msgstr "Ressources Web"
+
 msgctxt "field:offered.product,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
@@ -916,6 +924,10 @@ msgstr ""
 "Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
 "l'ensemble des objets de configuration liés à un même label."
 
+msgctxt "help:extra_data,web_ui_resources:"
+msgid "A list of resources which will only be used through the APIs"
+msgstr "Une liste de ressources qui ne seront utilisées que par les APIs"
+
 msgctxt "help:offered.configuration,use_default_style:"
 msgid ""
 "If checked, the report templates will use Coog's default style if there is "
@@ -1077,6 +1089,10 @@ msgid "Add and search all related configuration objects based on a tag"
 msgstr ""
 "Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
 "l'ensemble des objets de configuration liés à un même label."
+
+msgctxt "help:offered.product,web_ui_resources:"
+msgid "A list of resources which will only be used through the APIs"
+msgstr "Une liste de ressources qui ne seront utilisées que par les APIs"
 
 msgctxt "model:api.product,name:"
 msgid "API model for all configuration related APIs"
@@ -1413,10 +1429,6 @@ msgstr "Principale"
 msgctxt "view:extra_data:"
 msgid "Sub Data"
 msgstr "Sous Donnée"
-
-msgctxt "view:extra_data:"
-msgid "Web Resources"
-msgstr "Ressources Web"
 
 msgctxt "view:offered.configuration:"
 msgid "Offered Configuration"
