--- a/modules/web_configuration/doc/fr/CHANGELOG
+++ b/modules/web_configuration/doc/fr/CHANGELOG
@@ -1,2 +1,4 @@
+* FEA#13159 Ajout des valeurs binaires pour les resources Front End
+
 Version 2.6 - 2019-10-11
 * FEA#12675 Gestion des resources Front End
