--- a/modules/contract_distribution/locale/fr.po
+++ b/modules/contract_distribution/locale/fr.po
@@ -87,6 +87,10 @@ msgctxt "field:distribution.commercial_product,start_date:"
 msgid "Start Date"
 msgstr "Date d'Effet"
 
+msgctxt "field:distribution.commercial_product,web_ui_resources:"
+msgid "Web UI Resources"
+msgstr "Ressources Web"
+
 msgctxt "field:distribution.commercial_product,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
@@ -106,6 +110,10 @@ msgstr "Tous les produits commerciaux"
 msgctxt "field:distribution.network,commercial_products:"
 msgid "Commercial Products"
 msgstr "Produits Commerciaux"
+
+msgctxt "field:distribution.network,distributors:"
+msgid "Distributors"
+msgstr "Distributeurs"
 
 msgctxt "field:distribution.network,is_distributor:"
 msgid "Distributor"
@@ -175,6 +183,14 @@ msgstr ""
 msgctxt "help:distribution.commercial_product,name:"
 msgid "The name that will be displayed to the end user"
 msgstr "Nom qui sera affiché à l'utilisateur"
+
+msgctxt "help:distribution.commercial_product,web_ui_resources:"
+msgid "A list of resources which will only be used through the APIs"
+msgstr "Une liste de ressources qui ne seront utilisées que par les APIs"
+
+msgctxt "help:distribution.network,distributors:"
+msgid "All distributors \"below\" this network"
+msgstr "Tous les distributeurs \"sous\" ce réseau"
 
 msgctxt "help:distribution.network,is_distributor:"
 msgid ""
