--- a/modules/web_configuration/locale/fr.po
+++ b/modules/web_configuration/locale/fr.po
@@ -30,10 +30,6 @@ msgctxt "field:ir.model-web.ui.resource.key,web_ui_res_key:"
 msgid "Web UI Resource Key"
 msgstr "Clé d'une ressource web"
 
-msgctxt "field:ir.model-web.ui.resource.key,web_ui_resources:"
-msgid "Web UI Resources"
-msgstr "Ressources web"
-
 msgctxt "field:ir.model-web.ui.resource.key,write_date:"
 msgid "Write Date"
 msgstr "Modifié par"
@@ -46,6 +42,10 @@ msgctxt "field:ir.model-web.ui.resource.key,xml_id:"
 msgid "XML Id"
 msgstr "XML Id"
 
+msgctxt "field:web.ui.resource,binary_value:"
+msgid "Binary Value"
+msgstr "Valeur binaire"
+
 msgctxt "field:web.ui.resource,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
@@ -57,6 +57,10 @@ msgstr "Date de Création"
 msgctxt "field:web.ui.resource,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
+
+msgctxt "field:web.ui.resource,filename:"
+msgid "File Name"
+msgstr "Nom du fichier"
 
 msgctxt "field:web.ui.resource,id:"
 msgid "ID"
@@ -77,6 +81,10 @@ msgstr "Origine"
 msgctxt "field:web.ui.resource,rec_name:"
 msgid "Record Name"
 msgstr "Nom de l'enregistrement"
+
+msgctxt "field:web.ui.resource,technical_kind:"
+msgid "Technical Kind"
+msgstr "Type technique"
 
 msgctxt "field:web.ui.resource,value:"
 msgid "Value"
@@ -110,6 +118,10 @@ msgctxt "field:web.ui.resource.key,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
+msgctxt "field:web.ui.resource.key,filter_model:"
+msgid "Filter Model"
+msgstr "Filtre du modèle"
+
 msgctxt "field:web.ui.resource.key,id:"
 msgid "ID"
 msgstr "Identifiant"
@@ -117,10 +129,6 @@ msgstr "Identifiant"
 msgctxt "field:web.ui.resource.key,ir_model_resource_key:"
 msgid "IR Model Resource Key"
 msgstr "Modèle Coog de la clé"
-
-msgctxt "field:web.ui.resource.key,filter_model:"
-msgid "Filter Model"
-msgstr "Filtre du modèle"
 
 msgctxt "field:web.ui.resource.key,model_description:"
 msgid "Model Description"
@@ -146,9 +154,9 @@ msgctxt "field:web.ui.resource.key,xml_id:"
 msgid "XML Id"
 msgstr "XML Id"
 
-msgctxt "help:ir.model-web.ui.resource.key,web_ui_resources:"
-msgid "A list of resources which will only be used through the APIs"
-msgstr "Une liste de ressources qui ne seront utilisées que par les API"
+msgctxt "help:web.ui.resource,binary_value:"
+msgid "The binary value for this origin / key pair"
+msgstr "La valeur binaire pour cette paire origine / clé"
 
 msgctxt "help:web.ui.resource,key:"
 msgid "Link to the description of this resource for this origin"
@@ -203,13 +211,17 @@ msgctxt "model:ir.ui.menu,name:web_resources_keys"
 msgid "Web Resources Keys"
 msgstr "Clefs des ressources web"
 
-msgctxt "model:res.group,name:group_web_configuration_manage1"
+msgctxt "model:res.group,name:"
 msgid "Coog Web Configuration management"
 msgstr "Gestion de la configuration Web Coog"
 
-msgctxt "model:res.group,name:group_web_configuration_read1"
+msgctxt "model:res.group,name:group_web_configuration_manage"
+msgid "Coog Web Configuration management"
+msgstr "Gestion de la configuration Web Coog"
+
+msgctxt "model:res.group,name:group_web_configuration_read"
 msgid "Coog Web Configuration Consultation"
-msgstr "Consultation de configuration Web Coog"
+msgstr "Consultation de la configuration Web Coog"
 
 msgctxt "model:web.ui.resource,name:"
 msgid "Web UI Resource"
@@ -218,3 +230,35 @@ msgstr "Ressources web"
 msgctxt "model:web.ui.resource.key,name:"
 msgid "Web UI Resource Key"
 msgstr "Clés"
+
+msgctxt "model:web.ui.resource.key,name:key_format"
+msgid "Format"
+msgstr "Format"
+
+msgctxt "model:web.ui.resource.key,name:key_helper"
+msgid "Helper"
+msgstr "Helper"
+
+msgctxt "model:web.ui.resource.key,name:key_markdown_formatted_text"
+msgid "Markdown Formatted Text"
+msgstr "Text formatté en MarkDown"
+
+msgctxt "model:web.ui.resource.key,name:key_theme"
+msgid "Theme"
+msgstr "Thême"
+
+msgctxt "model:web.ui.resource.key,name:key_title"
+msgid "Title"
+msgstr "Titre"
+
+msgctxt "model:web.ui.resource.key,name:key_widget"
+msgid "Widget"
+msgstr "Widget"
+
+msgctxt "selection:web.ui.resource,technical_kind:"
+msgid "Binary"
+msgstr "Binaire"
+
+msgctxt "selection:web.ui.resource,technical_kind:"
+msgid "Text"
+msgstr "Texte"
